--- a/JiaoBaoYun-hb/html/micro-course/course-attended.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-attended.html
@@ -7,6 +7,7 @@
 		<title>关注的课程</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/utils/fresh.css" rel="stylesheet" />
 		<link href="../../css/micro-course/course-list.css" rel="stylesheet" />
 	</head>
