--- a/JiaoBaoYun-hb/html/quan/space-detail.html
+++ b/JiaoBaoYun-hb/html/quan/space-detail.html
@@ -50,7 +50,7 @@
 	</head>
 	<header class="mui-bar mui-bar-nav">
 		<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		<h1 id="spaceDetail" class="mui-title">空间详情</h1>
+		<h1 id="spaceDetail" class="mui-title">详情</h1>
 		<a id="delete" class="mui-icon iconfont icon-moreandroid mui-pull-right"></a>
 
 	</header>
