展现 微课 登陆逻辑

--- a/JiaoBaoYun-hb/html/micro-course/course-all.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-all.html
@@ -33,15 +33,21 @@
 		<script type="text/javascript">
 			mui.init();
 			var freshContainer;
-			var freshFlag=0;
-			var pageFlag = 1;//关注0，全部1
-			var totalPage = 0;//数据总页数
-			var pageIndex=1;
-			var courseArray = [];//显示的数组
+			var freshFlag = 0;
+			var pageFlag = 1; //关注0，全部1
+			var totalPage = 0; //数据总页数
+			var pageIndex = 1;
+			var courseArray = []; //显示的数组
 			course_list.initFresh();
 			mui.plusReady(function() {
-				course_list.getData(pageIndex,document.getElementById("list-container"),course_list.setData);
+				course_list.getData(pageIndex, document.getElementById("list-container"), course_list.setData);
 				course_list.setListener();
+				window.addEventListener("infoChanged", function() {
+					console.log("+++++++++通知刷新+++++++++");
+					pageIndex = 1;
+					freshFlag = 1;
+					course_list.getData(pageIndex, document.getElementById("list-container"), course_list.setData);
+				});
 			});
 		</script>
 	</body>
