--- a/JiaoBaoYun-hb/html/micro-course/course-attended.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-attended.html
@@ -36,14 +36,20 @@
 			mui.init();
 			course_list.initFresh();
 			var freshContainer;
-			var freshFlag=0;//0默认 1下拉刷新 2上拉加载
-			var pageFlag = 0;//关注0，全部1
-			var courseArray = [];//显示的数组
-			var totalPage = 0;//数据总页数
-			var pageIndex=1;
+			var freshFlag = 0; //0默认 1下拉刷新 2上拉加载
+			var pageFlag = 0; //关注0，全部1
+			var courseArray = []; //显示的数组
+			var totalPage = 0; //数据总页数
+			var pageIndex = 1;
 			mui.plusReady(function() {
-				course_list.getData(pageIndex,document.getElementById("list-container"),course_list.setData);
+				course_list.getData(pageIndex, document.getElementById("list-container"), course_list.setData);
 				course_list.setListener();
+				window.addEventListener("infoChanged", function() {
+					console.log("+++++++++通知刷新+++++++++")
+					pageIndex = 1;
+					freshFlag = 1;
+					course_list.getData(pageIndex, document.getElementById("list-container"), course_list.setData);
+				})
 			})
 		</script>
 	</body>
